Clover website desktop version improvements

--- a/components/Blog/Blog.module.scss
+++ b/components/Blog/Blog.module.scss
@@ -3,24 +3,23 @@
 .wrapper {
   padding: 120px 20px;
   width: 100%;
-  background: #000000;
   position: relative;
 
-  &::before {
-    content: url("../../public/images/blog-bg.png");
-    position: absolute;
-    bottom: 0;
-    left: -19px;
-    z-index: 0;
-  }
+  // &::before {
+  //   content: url('../../public/images/blog-bg.png');
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: -19px;
+  //   z-index: 0;
+  // }
 
-  &::after {
-    content: url("../../public/images/blog-bg.png");
-    position: absolute;
-    top: 0;
-    right: -19px;
-    z-index: 0;
-  }
+  // &::after {
+  //   content: url('../../public/images/blog-bg.png');
+  //   position: absolute;
+  //   top: 0;
+  //   right: -19px;
+  //   z-index: 0;
+  // }
 }
 
 .container {
@@ -29,11 +28,13 @@
 }
 
 .title {
+  font-family: Gilroy-SemiBold;
   font-weight: 400;
-  font-size: 52px !important;
-  line-height: 63px;
+  font-size: 54px !important;
+  line-height: 60px;
   text-align: center;
   color: #ffffff;
+  letter-spacing: -2px;
 }
 
 .list {
@@ -47,7 +48,6 @@
 .item {
   margin: 20px 0 0 0;
   width: 100%;
-  background: #000000;
   z-index: 1;
 }
 
@@ -66,7 +66,6 @@
   align-items: flex-start;
   text-align: left;
   height: 100%;
-  border: 1px solid rgba(0,0,0,.2);
 }
 
 .image {
@@ -76,6 +75,7 @@
   img {
     max-width: 100%;
     min-height: 150px;
+    border-radius: 18px;
     width: auto;
     height: auto;
   }
@@ -83,19 +83,18 @@
 
 .text {
   flex: 1 0 auto;
-  padding: 20px 20px 40px 30px;
+  padding: 24px 0 0 0;
   line-height: 25px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 300;
+  font-family: Gilroy-Medium;
   font-size: 18px;
-  color: #41F69F;
+  line-height: 30px;
+  color: $color-light;
 }
 
 .hidden {
   opacity: 0;
   visibility: hidden;
-  transition: .85s opacity, .85s visibility;
+  transition: 0.85s opacity, 0.85s visibility;
 }
 
 .visible {
