--- a/components/CloverDnaAndFeature/CloverDNA.module.scss
+++ b/components/CloverDnaAndFeature/CloverDNA.module.scss
@@ -1,10 +1,17 @@
 @import 'styles/variables';
 
 .wrapper {
-  width: 100%;
+  width: calc(100% - 240px);
+  margin: auto;
   position: relative;
-  padding-bottom: 30px;
-  //background: url('/images/line2.png') no-repeat center bottom/100% auto;
+  padding: 102px;
+  padding-bottom: 62px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.15);
+  border-radius: 54px;
+  margin-top: 120px;
 }
 
 .line {
@@ -56,18 +63,21 @@
 }
 
 .title {
-  font-family: Alata;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 52px;
-  line-height: 63px;
-  text-align: center;
-  margin-bottom: 65px;
-  color: $color-title;
+  font-family: Gilroy-SemiBold;
+  font-size: 54px;
+  line-height: 60px;
+  letter-spacing: -2px;
+  color: $color-text;
+}
+
+.backImage {
+  width: 100%;
+  height: auto;
+  margin-top: 42px;
 }
 
 .topContent {
-  width: 1168px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -82,45 +92,38 @@
 
 .topContentItem {
   max-width: 474px;
+  position: relative;
   width: 80vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  color: #fff;
-  font-family: Roboto, sans-serif;
-  text-align: center;
-  position: relative;
-  margin-bottom: 40px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  text-align: left;
+  padding: 42px 0;
+
   h3 {
+    color: $color-text;
     font-weight: bold;
+    font-family: Gilroy-SemiBold;
     font-size: 26px;
-    line-height: 41px;
-    margin-bottom: 28px;
-    font-family: Alata;
+    line-height: 30px;
+    margin-bottom: 24px;
   }
 
   p {
+    color: $color-light;
+    font-family: Gilroy-Medium;
     font-size: 18px;
-    line-height: 25px;
-    color: rgba(#fff, 0.8);
-    font-weight: 300;
-    font-family: Roboto, sans-serif;
-    margin-bottom: 30px;
+    line-height: 30px;
   }
 
   button {
-    border: 2px solid #41f69f;
-    border-radius: 8px;
-    line-height: 50px;
-    font-family: Roboto;
-    font-weight: 500;
-  }
-
-  &:last-child {
-    button {
-      border: 2px solid #0080b9;
-    }
+    border-radius: 12px;
+    font-family: Gilroy-Bold;
+    font-size: 18px;
+    line-height: 18px;
+    margin-top: 36px;
+    box-shadow: 0px 12px 36px rgba(76, 191, 122, 0.35);
   }
 }
 
@@ -227,15 +230,6 @@
   }
 }
 
-@media (min-width: $media-md) {
-  .wrapper {
-    padding-bottom: 140px;
-  }
-  .topContentItem {
-    height: 332px;
-  }
-}
-
 @media (max-width: $media-xl) {
   .topContent,
   .featureContent,
@@ -247,11 +241,12 @@
     justify-content: center;
   }
 
-  .line2, .line {
+  .line2,
+  .line {
     height: auto;
   }
 }
-@media  (max-width: $media-sm) {
+@media (max-width: $media-sm) {
   .title {
     font-size: 26px;
     margin-bottom: 0;
@@ -263,9 +258,9 @@
       margin-bottom: 15px;
     }
 
-    p, button {
+    p,
+    button {
       font-size: 14px;
     }
   }
 }
-
