--- a/components/ClvFeatures/CloverFeature.module.scss
+++ b/components/ClvFeatures/CloverFeature.module.scss
@@ -3,7 +3,6 @@
 .wrapper {
   width: 100%;
   position: relative;
-  background-color: #121c24;
   // &::before {
   //   content: '';
   //   position: absolute;
@@ -59,13 +58,12 @@
   font-style: normal;
   font-weight: 400;
   text-align: center;
-  color: #ffffff;
+  color: white;
   justify-content: center !important;
   z-index: 1;
-  &>span {
+  & > span {
     display: block;
     text-align: center;
-    color: #6fcf97;
     line-height: 69px;
     font-size: 52px;
   }
@@ -74,7 +72,7 @@
 .typing {
   width: 100%;
   min-height: 138px;
-  color: #ffffff;
+  color: $color-accent;
   line-height: 55px;
   font-size: 40px;
   padding: 0 150px;
@@ -95,39 +93,39 @@
 }
 
 .topContentItem {
-  width: 500px;
-  height: 320px;
-  //display: flex;
-  //flex-direction: column;
-  //align-items: center;
+  position: relative;
+  width: 384px;
+  height: 384px;
   color: #fff;
   font-family: Roboto, sans-serif;
   text-align: left;
   margin-top: 70px;
   position: relative;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 30px;
+  padding: 30px;
 
   h3 {
-    font-family: Alata;
+    font-family: Gilroy-SemiBold;
     font-size: 26px;
-    line-height: 46px;
-    margin-bottom: 28px;
+    line-height: 30px;
+    margin-bottom: 24px;
     width: 100%;
     text-align: left;
   }
 
   p {
-    font-size: 18px;
-    opacity: 0.8;
-    line-height: 140%;
-    font-weight: 300;
-    font-family: Roboto, sans-serif;
+    font-size: 15px;
+    line-height: 24px;
+    font-family: Gilroy-Medium;
   }
 
-  a, span {
+  a,
+  span {
     display: inline-block;
-    margin-top: 30px;
-    color: #27a577;
-    border-bottom: 1px solid #27a577;
+    margin-top: 24px;
+    color: $color-accent;
+    border-bottom: 1px solid $color-accent;
     cursor: pointer;
     font-weight: bold;
   }
@@ -147,9 +145,32 @@
   }
 
   img {
+    position: absolute;
     width: 80%;
     margin-top: 20px;
   }
+
+  &.hovered {
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 0.12),
+        rgba(255, 255, 255, 0.12)
+      ),
+      #151e26;
+
+    .itemBack {
+      opacity: 0.4;
+    }
+  }
+}
+
+.itemBack {
+  width: auto;
+  height: 178px;
+  margin-top: 0 !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .center {
@@ -157,7 +178,7 @@
 }
 
 .featureContent {
-  max-width: 1168px;
+  max-width: 1200px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -198,10 +219,6 @@
 
 .black {
   color: #ffffff !important;
-}
-
-.gray {
-  color: #a0bfc7 !important;
 }
 
 .clvToken {
@@ -300,7 +317,7 @@
   }
 
   .title {
-    &>span {
+    & > span {
       width: 100%;
       display: block;
       text-align: center;
@@ -354,13 +371,12 @@
     }
 
     p {
-      line-height: 25px
+      line-height: 25px;
     }
 
-    p, button {
+    p,
+    button {
       font-size: 14px;
     }
   }
 }
-
-
