--- a/components/EarlyBackers/EarlyBackers.module.scss
+++ b/components/EarlyBackers/EarlyBackers.module.scss
@@ -1,18 +1,18 @@
-@import "styles/variables";
+@import 'styles/variables';
 
 .wrapper {
   width: 100%;
   height: 376px;
-  background-image: url("../../public/images/backers-bg.png");
   background-position: left bottom;
   background-size: 100% 100%;
 
   h3 {
-    font-weight: bold;
-    font-size: 52px;
+    font-family: Gilroy-SemiBold;
+    font-size: 54px;
+    line-height: 60px;
     text-align: center;
-    color: #000000;
-    margin-top: 120px;
+    color: white;
+    margin-top: 150px;
   }
 }
 
@@ -27,6 +27,19 @@
   align-items: center;
   width: 100%;
   margin-top: 50px;
+  li {
+    padding: 0 6px;
+  }
+}
+
+.item {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 18px;
 }
 
 .image {
@@ -45,7 +58,7 @@
   .content {
     position: relative;
     & > * {
-      width: 100%
+      width: 100%;
     }
   }
 }
@@ -67,4 +80,3 @@
     }
   }
 }
-
