--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -30,13 +30,13 @@
   position: relative;
   width: 100%;
   height: 50px;
-  background: #22D297;
+  background: #22d297;
 }
 
 .reminderContent {
   width: 100%;
   height: 100%;
-  color: #16674C;
+  color: #16674c;
   font-size: 18px;
   display: flex;
   justify-content: center;
@@ -58,7 +58,7 @@
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
   &::-webkit-scrollbar {
-    width: 0!important;
+    width: 0 !important;
   }
 }
 
@@ -78,8 +78,8 @@
   line-height: 24px;
   text-align: center;
   font-size: 14px;
-  color: #16674C;
-  border: 1px solid #16674C;
+  color: #16674c;
+  border: 1px solid #16674c;
   box-sizing: border-box;
   border-radius: 24px;
   margin-left: 20px;
@@ -97,6 +97,7 @@
 }
 
 .container {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -122,15 +123,16 @@
 }
 
 .logoImage {
-  width: 36px;
-  height: 36px;
+  width: 24px;
+  height: 24px;
 }
 
 .logoText {
-  margin: 0 0 0 10px;
+  margin: 0 0 0 9px;
   font-weight: $fw-medium;
   font-size: 32px;
   line-height: 1.125;
+  color: $color-text;
 }
 
 .rightBox {
@@ -147,11 +149,10 @@
 @media (min-width: $media-lg) {
   .wrapper {
     border-bottom: none;
-    background-color: rgba(#000, 0.4);
-    // background: transparent;
+    background: transparent;
     z-index: 111;
     &.fixed {
-      background-color: #000;
+      background-color: white;
     }
   }
 
@@ -159,7 +160,6 @@
     display: none;
   }
 }
-
 
 @media (max-width: $media-lg) {
   .reminderContent {
