--- a/components/StrategicPartners/StrategicPartners.module.scss
+++ b/components/StrategicPartners/StrategicPartners.module.scss
@@ -1,43 +1,52 @@
 @import 'styles/variables';
 
 .root {
-  padding: 120px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #ffffff;
 }
 
 .header {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 52px;
   text-align: center;
-  margin-bottom: 30px;
-  color: #000000;
+  margin-bottom: 48px;
+  font-family: Gilroy-SemiBold;
+  font-size: 54px;
+  line-height: 60px;
 }
 
 .logos {
   max-width: 1230px;
   width: 100%;
   overflow: hidden;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 246px);
+  display: flex;
+  flex-wrap: wrap;
   justify-items: center;
   align-items: center;
   justify-content: center;
 }
 
 .logo {
-  width: 100%;
+  position: relative;
+  width: 192px;
   height: 100px;
   float: left;
+  margin: 9px 6px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.05);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 }
 
 @media (min-width: $media-md) {
   .logo {
-    width: 246px;
     height: 100px;
   }
 }
