--- a/components/Team/Team.module.scss
+++ b/components/Team/Team.module.scss
@@ -1,33 +1,42 @@
 @import 'styles/variables';
 
-.content{
-  //background: url('../../public/images/team.png');
-  background: #121d24;
+.content {
   width: 100%;
   color: $color-white;
-  background-size: cover;
+  box-sizing: border-box;
+  margin-top: 150px;
+  margin-bottom: 90px;
 }
+
 .team {
-  padding: 120px 0;
+  border-radius: 54px;
+  background: white;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.15);
+  padding: 120px 102px 90px 102px;
   font-style: normal;
-  //font-weight: bold;
   font-size: 52px;
   line-height: 63px;
   text-align: center;
   width: 100%;
-  max-width: 1030px;
+  max-width: 1230px;
   margin: 0 auto;
-
 }
 
 .header {
   margin-bottom: 40px;
+  font-family: Gilroy-SemiBold;
+  font-size: 54px;
+  line-height: 60px;
+  text-align: center;
+  letter-spacing: -2px;
+
+  color: $color-text;
 }
 
 .people {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .peopleSingle {
@@ -38,18 +47,20 @@
   margin-bottom: 32px;
 }
 .name {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 32px;
-  margin-bottom: 8px;
+  font-family: Gilroy-SemiBold;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+
+  color: $color-text;
 }
 .desc {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 300;
+  font-family: Gilroy-Medium;
   font-size: 18px;
-  line-height: 25px;
+  line-height: 30px;
+  text-align: center;
+
+  color: $color-light;
 }
 
 @media (min-width: $media-lg) {
