--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   min-height: 100vh;
-  background: #000;
+  background: #151e26;
   img {
     border: 0;
     vertical-align: middle;
