--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -3,7 +3,7 @@
 .nav {
   position: absolute;
   z-index: $zindex-dropdown;
-  top: 20px;
+  top: 0;
   right: 0;
   padding: 0 20px;
   display: flex;
@@ -33,6 +33,10 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
+
+  h1 {
+    display: none;
+  }
 }
 
 .list {
@@ -127,6 +131,11 @@
   line-height: 1.3;
   text-align: center;
 }
+
+.logo,
+.logoText {
+  display: none;
+}
 @media (max-width: $media-xl) {
   .item:last-child {
     .links {
@@ -141,22 +150,73 @@
     width: 100vw;
     overflow: hidden;
   }
+  .logo {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    fill: $color-logo;
+    color: #fff;
+    &:hover {
+      .logoImage {
+        animation: logo-rotate 1s;
+      }
+    }
+
+    i {
+      height: 24px;
+      width: 24px;
+    }
+  }
+
+  .logoText {
+    display: block;
+    margin: 0 0 0 9px;
+    font-size: 30px;
+    line-height: 1.125;
+    color: $color-text;
+    font-family: Gilroy-SemiBold;
+  }
   .container {
     width: 100%;
     height: 100%;
+    padding: 12px;
+    background: white;
+
+    h1 {
+      margin-top: 90px;
+      font-family: Gilroy-SemiBold;
+      font-size: 40px;
+      line-height: 40px;
+      letter-spacing: -1.9px;
+      color: $color-text;
+      width: 100%;
+      text-align: left;
+    }
   }
   .list {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: flex-start;
     justify-content: flex-start;
-    background: #000;
-    padding: 25px 20px;
+    padding: 0;
+
+    > div:first-child {
+      width: 100%;
+    }
+
+    > div {
+      width: 50%;
+    }
   }
   .item {
-    margin-bottom: 20px;
+    margin-top: 48px;
     font-size: 18px;
 
     &:last-child {
@@ -169,16 +229,32 @@
       padding-bottom: 10px;
     }
   }
+  .itemLabel {
+    font-family: Gilroy-SemiBold;
+    font-size: 18px;
+    line-height: 24px;
+    color: $color-text;
+  }
   .links {
     position: unset !important;
     background: transparent !important;
     display: block !important;
+    box-shadow: none !important;
+    border: none !important;
+    padding: 0 !important;
+  }
+  .link {
+    font-family: Gilroy-Medium;
+    font-size: 18px;
+    line-height: 18px;
+    color: $color-light;
   }
 }
 @media (min-width: $media-md) {
   .nav {
     position: absolute;
     z-index: $zindex-dropdown;
+    top: 20px;
     height: auto;
     flex: 1 0 auto;
     opacity: 1;
